# chategw

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  chategw-ui.sln
cuda-backend/: .gitignore  README.md  embed.py  pyproject.toml  split.py
cuda-backend/chategw/: __init__.py  ai.py  util.py
cuda-backend/chategw/models/: __init__.py  book_parsing.py  entity_parser.py  language_detector.py  question_detector.py  sentence_splitter.py  universal_translator.py
cuda-backend/configs/: base_cpu_config.cfg  base_gpu_config.cfg  cpu_config.cfg  gpu_config.cfg
cuda-backend/models/: .gitignore  Result_28.json  bible-synonyms.json  book-synonyms.json  en-bible-meta.json  questions.txt
cuda-backend/models/spacy-ner/: config.cfg  meta.json
cuda-backend/models/spacy-ner/ner/: moves
cuda-backend/models/spacy-ner/transformer/: model
cuda-backend/models/spacy-ref/: config.cfg  meta.json
cuda-backend/models/spacy-ref/ner/: model  moves
cuda-backend/models/spacy-ref/tok2vec/: model
cuda-backend/models/spacy-ref/vocab/: strings.json
cuda-backend/models/spacy/ner/: model
cuda-backend/models/spacy/parser/: model  moves
cuda-backend/models/spacy/tagger/: model
cuda-backend/notebooks/: 01 - NER Dataset Preparation V2.ipynb  01 - NER Dataset Preparation.ipynb  01a - NER Dataset Split.ipynb  02 - NER Traning - CPU.ipynb  02 - NER Traning - GPU.ipynb  02a - NER Traning - CPU.ipynb  03 - Encode Paragraphs.ipynb  04 - Embed.ipynb  Evaluate.ipynb  Recognize Entities.ipynb  TEST - generate traning data.ipynb  Test Entity Recognizer.ipynb
(+78 files in other folders)
